# TempleLinux

./: .gitmodules  COMPATIBILITY.md  Cargo.toml  README.md  TEMPLEOS_API.md  analysis.md  build.rs  loc_taxonomy.md  plan.md  refactor_plan.md  research.md
docs/screenshots/2026-02-15/: index.html
docs/screenshots/2026-02-17/: index.html
holyc/: LinuxBridge.HC  SoundDemo.HC  TimeClock.HC  WallPaperCtrl.HC  WallPaperFish.HC
packaging/arch/templelinux-git/: .SRCINFO  .gitignore  PKGBUILD
packaging/debian/: .gitignore  README.md  build-debs.sh
packaging/wayland-sessions/: templelinux.desktop
src/: assets.rs  audio.rs  lib.rs  main.rs  protocol.rs  rt.rs  shader.wgsl  sprite.rs  templeos.rs
src/templeshell/: 00_ui_primitives.rs  01_paths_browser.rs  02_shell.rs  03_gfx.rs  04_app.rs
tests/: gui_smoke.rs
